# rust-music-player

./: .gitignore  Cargo.toml
playlists-loader/: package.json  tsconfig.json
playlists-loader/src/: index.ts  yt_api.ts
src/: main.rs  music_data.rs  music_selection.rs  player.rs
