[package]
name = "musql-tinyaudio"
version = "0.1.0"
edition = "2021"

[dependencies]
tinyaudio = "0.1.4"
puremp3 = "0.1.0"
rand = "0.8.5"
anyhow = "1.0.86"
thiserror = "1.0.63"
serde_json = "1.0.125"
serde = { version = "1.0.208", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
